; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/wrappers/libproc/extr_libproc.c_proc_setpcontrol.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/wrappers/libproc/extr_libproc.c_proc_setpcontrol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROC_SETPC_NONE = common dso_local global i32 0, align 4
@PROC_SETPC_TERMINATE = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@PROC_INFO_CALL_SETCONTROL = common dso_local global i32 0, align 4
@PROC_SELFSET_PCONTROL = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @proc_setpcontrol(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @PROC_SETPC_NONE, align 4
  %7 = icmp slt i32 %5, %6
  br i1 %7, label %12, label %8

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @PROC_SETPC_TERMINATE, align 4
  %11 = icmp sgt i32 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %8, %1
  %13 = load i32, i32* @EINVAL, align 4
  store i32 %13, i32* %2, align 4
  br label %24

14:                                               ; preds = %8
  %15 = load i32, i32* @PROC_INFO_CALL_SETCONTROL, align 4
  %16 = call i32 (...) @getpid()
  %17 = load i32, i32* @PROC_SELFSET_PCONTROL, align 4
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @__proc_info(i32 %15, i32 %16, i32 %17, i32 %18, i32* null, i32 0)
  store i32 %19, i32* %4, align 4
  %20 = icmp eq i32 %19, -1
  br i1 %20, label %21, label %23

21:                                               ; preds = %14
  %22 = load i32, i32* @errno, align 4
  store i32 %22, i32* %2, align 4
  br label %24

23:                                               ; preds = %14
  store i32 0, i32* %2, align 4
  br label %24

24:                                               ; preds = %23, %21, %12
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i32 @__proc_info(i32, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @getpid(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
